# toolkits

./: CMakeLists.txt
.trunk/: trunk.yaml
.trunk/configs/: .clang-format  .clang-tidy
res/: CMakeLists.txt  start_all.sh
res/shaders/: CMakeLists.txt  simple.glsl
src/: CMakeLists.txt  freeglut_glad.cc  freeglut_glew.cc  glfw_glad.cc  glfw_glew.cc  load_shaders.cc  load_shaders.h  load_shaders_glad.cc  scene.cc  scene.h
